fix(reply): edit menu checkbox was displaced on mobile

--- a/src/components/edit-menu/edit-menu.module.css
+++ b/src/components/edit-menu/edit-menu.module.css
@@ -95,7 +95,6 @@
   }
 
   .replyCheckbox {
-    padding-left: 5px;
     padding-top: 0;
   }
 }
