--- a/src/components/post-mobile/post-menu-mobile/post-menu-mobile.module.css
+++ b/src/components/post-mobile/post-menu-mobile/post-menu-mobile.module.css
@@ -13,6 +13,10 @@
   cursor: pointer;
 }
 
+.checkbox {
+  float: left;
+}
+
 .postMenu {
   font-size: 16px;
   line-height: 2.5em;
